Fix: Adjust namespaces to match PSR-4 and add App.php to classmap

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "psr-4": {
             "NsAppEcoride\\": "app/",
             "NsCoreEcoride\\": "core/"
-        }
+        },
+        "classmap": [
+            "app/App.php"
+        ]
     }
 }
